--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -61,7 +61,7 @@ var engGreet = makeGreeting("en");
 spanGreet("Susan", "Jenkins");
 engGreet("John", "Wilson");
 engGreet("John", "Wilson");</pre>
-<pre class="w40 dkbg ivr">
+<br><pre class="w40 dkbg ivr">
 
   Fn returning a Fn. A counter that increments on each sucessive execution.
 
