--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,22 @@
     </ol>
     <hr />
   -->
+  <!-- https://www.youtube.com/watch?v=UDB-jm8MWro -->
+
+  <h2 class="date">Sunday June 5th, 2017</h2>
+  <h4 class="sleep">Slept: 4 hours</h4><br><br>
+  <h3 class="subtitle">Back to Angular. Methodically, deliberately, painstakingly going through--soup-to-nuts--what I don't know cold. Using 3 or 4 sources. John Lindquist, Matt Frisbie (O'Reilly). I've already discovered much about scope inheritance, breaking scope, etc. Spoke to @bendhalpern today about svg animated characters datavis app. Incredible conversation.</h3>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Angular revisited.</li>
+    <li>I can't fit it in today, but Karma/Jasmine & angular.js TDD <a href="https://www.youtube.com/watch?v=UDB-jm8MWro" target="_blank">Testing Tutorial</a></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Saturday June 4th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Yesterday was a day of facing down DB anxiety. It was extremely gratifying & confidence building. To be able to take the time and learn it and enjoy it...So much damned fun! --Hard and frustrating, but fun!</h3>
