--- a/states/angular/angular.html
+++ b/states/angular/angular.html
@@ -3,6 +3,65 @@
 <div class="angular-entry entry">
   <pre>
     <!-- pre for all -->
+<div class="dk-frame"><h3 class="chtitle ivr">Directive in it's simplest form</h3>
+<h4 class="pastpink">< scr>hellodirective.js< / scr></h4>
+<pre class="prettyprint w30">// hellodirective.js
+
+angular.module("eggApp1")
+  .directive("helloDir", function() {
+    return {
+      restrictions: "E",
+      template: "< h3>Hi World!< / h3>"
+    }
+  })</pre>
+<span class="coral">.html</span>
+<pre class="ltbg2 w20 sm"><span><</span>hello-dir><span><</span>hello-dir></pre>
+Restrict to Attribute: <i class="fuch">"A"</i> for attr.
+
+<pre class="prettyprint w30">angular.module("eggApp1")
+  .directive("hiworldDir", function() {
+    return {
+      restrictions: "A",
+      link: function() {
+        alert("Hi World!");
+      }
+    }
+  })</pre>
+Of course, if no template exists, nothing shows up in the browser.
+But...So long as an element with an attr of <span class="coral">hello-dir</span> exists in the html... The link: function fires!
+
+<span class="ivr">.html</span>
+<pre class="dkbg2 w10 sm"><i class="coral"><span><</span>i hello-dir><span><</span>i></i></pre>
+
+<h2 class="chtitle">♨️Dry Code Note♨️</h2>
+<div class="dk-frame w60 ctr"><h3>2 great things to note about directive defaults</h3>
+  1) Leave out the <code>restrictions:</code> property & the directive defaults to <i class="fuch">A</i>
+  2) Leave out the <code>link:</code> property simply return a function that will fire on an <code class="fuch">attr</code>
+
+Syntax is this:
+  <pre class="prettyprint w30">angular.module("eggApp1")
+    .directive("hiworldDir", function() {
+      return function() {
+          alert(" Hi World!")
+        }
+      });
+
+  // (.html)  < span hiworld-dir>< / span> </pre>
+</div>
+
+Two parameters in the signature of this function are <b class="paleY">scope</b> & <b class="paleY">element</b>
+<pre class="prettyprint w30">.directive("hiworldDir", function() {
+  return function(scope, element) {
+      alert(" Hi World!")
+    }
+  });</pre>
+
+
+
+
+
+<pre class="prettyprint w40"></pre>
+</div>
 <div class="plain-frame3"><h3>Custom Filter</h3>
   1. Inside the <em class="dkred">{ { } }</em> place data with a pipe, then filter name.
   <pre class="ltbg2 w50 ctr">
@@ -134,29 +193,25 @@ We are essentially running a nested loop to paint these to the html.
 </div>
 <div class="col-2 brdr-lt">Let's do some built-in filter awesomeness!
 <pre class="dkbg w40 ctr sm">   < h3>Search: < input ng-model="wordSearch.$" > < / h3>
-    < ol <b class="sand">ng-repeat="vocab in data | filter: wordSearch | <i class="y">orderBy: word</i>"</b>>
-      ...
+  < ol <b class="sand">ng-repeat="vocab in data | filter: wordSearch | <i class="y">orderBy: word</i>"</b>>
+    ...
 
-    < h3>Search: < input ng-model="wordSearch.$" > < / h3>
-    < ol <b class="sand">ng-repeat="vocab in data | filter: wordSearch | <i class="y">orderBy: '<span class="ltred">-</span>word'</i>"</b>>
-      ...
-      
-    < h3>Search: < input ng-model="wordSearch.$" > < / h3>
-    < ol <b class="sand">ng-repeat="vocab in data | filter: wordSearch | "</b>>
-      ...</pre>
+  < h3>Search: < input ng-model="wordSearch.$" > < / h3>
+  < ol <b class="sand">ng-repeat="vocab in data | filter: wordSearch | <i class="y">orderBy: ' -word ' </i>"</b>>
+    ...
+  < ol <b class="sand">ng-repeat="vocab in data | filter: wordSearch | <i class="y">orderBy: 'word' | limitTo: 5 </i> "</b>>
+    ...
+  < ol <b class="sand">ng-repeat="vocab in data|filter:wordSearch|<i class="y">orderBy: 'word' | limitTo: ' -5 '  </i>"</b>>
+    ...
+  </pre>
   <pre class="lt-frame w40 ctr sm">
 
 Alphabetical by <i class="y">word</i>
 
 neg sign and '' around it reverses the logic.
+
 Reverse alphabetical. <sup class="ltred">*</sup> must take '' around it.
 
-  Finally, to search the aggregate of all text on all properties...
-  I place <i class="y">.$</i> onto the "defined" filter in ng-model.
-
-
-
-  <span class="paleY">This would be a kind of "Global" search</span>
 
 </pre>
 </div>
