--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -79,7 +79,7 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>node massive project</li>
-    <a href="https://github.com/statianzo/sql-setup">setting up a DB on Heroku</a>
+    <a href="https://github.com/statianzo/sql-setup">setting up a postgres DB on Heroku</a>
     <li>completed HEROKU db /beau <a href="https://dashboard.heroku.com/apps">my HEROKU Dashboard</a></li>
 
   </ol>
