--- a/states/angular/angular.html
+++ b/states/angular/angular.html
@@ -49,19 +49,84 @@ Syntax is this:
   // (.html)  < span hiworld-dir>< / span> </pre>
 </div>
 
-Two parameters in the signature of this function are <b class="paleY">scope</b> & <b class="paleY">element</b>
-<pre class="prettyprint w30">.directive("hiworldDir", function() {
-  return function(scope, element) {
-      alert(" Hi World!")
+3 parameters in the signature of this function are <b class="paleY">scope</b>, <b class="paleY">element</b> & <b class="paleY">attrs</b>
+(here we're just using "element")
+I'll create 2 directives binding to an element the events "mouseover" & "mouseleave":
+<pre class="prettyprint w30">.directive("rollOver", function() {
+  return function(scope, element, attrs) {
+    element.bind('mouseover', function() {
+        console.log("OUCH!!!");
+      })
+    }
+  });
+</pre>
+camelCase dir names ought to be normalized in html as kebab-case: <span class="coral"><<span>aside roll-over><</span>/ aside></span>
+<pre class="prettyprint w30">.directive("rollOff", function() {
+    return function(scope, element, attrs){
+      element.bind('mouseout', function() {
+        console.log("Ahhhh!");
+      })
+    }
+  });
+</pre>
+Now with the second attr added: <span class="coral"><<span>aside roll-over roll-off><b class="paleY">Roll Over Me!</b><</span>/ aside></span>
+<hr>
+This element has an addClass() method, for example:
+
+
+<pre class="dkbg ctr w30">.directive("rollOver", function() {
+  return function(scope, element, attrs) {
+    element.bind('mouseover', function() {
+        element<b class="paleY">.addClass</b>("white");
+        console.log("OUCH!!!")
+      })
     }
   });</pre>
+<h3>Let's step this up by feeding to this attr we've created inside the html</h3>
+Use the <span class="fuch">attr</span> param fed to the directive.
+<div class="col-2 lt-frame">
+rolloverDir.js<pre class="prettyprint w40">.directive("rollover", function() {
+    return function(scope, element, attr) {
+      element.bind('mouseover', function() {
+          element.addClass(attr.rollover);
+        })
+      }
+    });</pre>
+<pre class="dkred w40">
 
 
 
+attrs.rollover's value is whatever is
+fed to it in the html with "roll-over="<b class="ivr">somevalue</b>"
 
+<code><<span>aside roll-over="<b class="wh">white</b>"><</span>/aside></code>
 
-<pre class="prettyprint w40"></pre>
+</pre>
 </div>
+<div class="col-2 lt-frame">
+rolloffDir.js
+<pre class="prettyprint w40">.directive("rolloff", function() {
+      return function(scope, element, attr){
+        element.bind('mouseout', function() {
+          element.removeClass(attr.rollover);
+        })
+      }
+    });</pre>
+
+<pre class="dkred w40">
+The beauty of this is the following:
+2 directives share scope:
+rollover is a method on attr used in both directives!!😎
+Here, it's used to remove the value that is set
+with rollover directive! #angularFTW!
+
+<span class="mango">Make certain: </span> both Directives are referenced in html
+<code><<span>aside rollover="<b class="wh">white</b>" rolloff><</span>/aside></code>
+</pre>
+
+</div>
+
+
 <div class="plain-frame3"><h3>Custom Filter</h3>
   1. Inside the <em class="dkred">{ { } }</em> place data with a pipe, then filter name.
   <pre class="ltbg2 w50 ctr">
@@ -203,7 +268,7 @@ We are essentially running a nested loop to paint these to the html.
     ...
   < ol <b class="sand">ng-repeat="vocab in data|filter:wordSearch|<i class="y">orderBy: 'word' | limitTo: ' -5 '  </i>"</b>>
     ...
-  </pre>
+  </pre><br>
   <pre class="lt-frame w40 ctr sm">
 
 Alphabetical by <i class="y">word</i>
@@ -212,6 +277,9 @@ neg sign and '' around it reverses the logic.
 
 Reverse alphabetical. <sup class="ltred">*</sup> must take '' around it.
 
+limitTo works just as you might expect.
+
+These features of angular are stackable
 
 </pre>
 </div>
