--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,8 +18,21 @@
     </ol>
     <hr />
   -->
-  <!-- https://www.youtube.com/watch?v=UDB-jm8MWro -->
+  <h2 class="date">Monday June 5th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Organized codepen profile. It's a bit rough but a few things of interest. <a href="https://codepen.io/beau_dev/" target="_blank">CodePen Link</a> Got very far in Ang Directives. It's actually fun tooling with the scope sharing. --Still getting in the the real use-cases beyond simply manipulating classes on the element. Will continue today. Let's get started.</h3>
 
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>More about directives.</li>
+    <li></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Sunday June 5th, 2017</h2>
   <h4 class="sleep">Slept: 4 hours</h4><br><br>
   <h3 class="subtitle">Back to Angular. Methodically, deliberately, painstakingly going through--soup-to-nuts--what I don't know cold. Using 3 or 4 sources. John Lindquist, Matt Frisbie (O'Reilly). I've already discovered much about scope inheritance, breaking scope, etc. Spoke to @bendhalpern today about svg animated characters datavis app. Incredible conversation.</h3>
@@ -31,7 +44,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Much Ang custom filter loveliness</li>
+    <li>Cust directives</li>
   </ol>
   <hr />
   <h2 class="date">Saturday June 4th, 2017</h2>
