adds gsap view & cleanup

--- a/directive_templates/navdirective.html
+++ b/directive_templates/navdirective.html
@@ -13,5 +13,7 @@
     <li class="navlink-container"><a ui-sref="svg">SVG</a></li>
     <li class="navlink-container"><a ui-sref="es6">ES6</a></li>
     <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
+    <li class="navlink-container"><a ui-sref="gsap">GSAP</a></li>
+
   </ul>
 </nav>
