--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <script src="./states/sql/sqlCtrl.js"></script>
 <script src="./states/es6/es6Ctrl.js"></script>
 <script src="./states/svg/svgCtrl.js"></script>
-
+<script src="./states/gsap/gsapCtrl.js"></script>
 
   </body>
 </html>
