--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -404,7 +404,7 @@ var result = sentArr.reduce(function(prev, next, index) {
 
 },{})
 
-console.log(result); <img src="./img/goodObj1.png" class="w10 right" alt="goodObj"></pre> Now, simply test for <span class="pastY">val > 1</span>!!
+console.log(result); <img src="./img/goodobj1.png" class="w10 right" alt="goodObj"></pre> Now, simply test for <span class="pastY">val > 1</span>!!
 
     <pre class="prettyprint w60">var sentence = "He's a good person doing a good thing for a good person.";
 var sentArr = sentence.split(' ');
